# pyrappel

./: .gitignore  Dockerfile  README.md  clib_wrapper.c  docker-compose.yml  nsjail.cfg  pyproject.toml  pyrappel.py  requirements.txt
experiments/: pyrappel-exp.py
pyrappel/: __init__.py  asm.py  cli.py  config.py  elf.py  exec_file.py  ptrace.py  types.py  ui.py  utils.py
pyrappel/arch/: __init__.py  strategy.py
